[package]
name = "flatc"
version = "1.0.0+1.12.0"
authors = ["chip <chip@chip.sh>"]
description = "Vendored executable of flatbuffer's `flatc`"
repository = "https://github.com/chippers/flatc.rs"
license = "MIT OR Apache-2.0"
keywords = ["flatbuffers"]
edition = "2018"

[build-dependencies]
cmake = "0.1"