[package]
name = "flatc"
version = "22.9.29"
authors = ["chip <chip@chip.sh>"]
description = "Vendored executable of flatbuffer's `flatc`."
documentation = "https://docs.rs/flatc"
repository = "https://github.com/chippers/flatc.rs"
readme = "README.md"
license = "MIT"
keywords = ["flatbuffers"]
edition = "2018"

[build-dependencies]
cmake = "0.1"
